src/objects/Retail_Forecast__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Retail Forecasts</relationshipLabel>
        <relationshipName>Retail_Forecasts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Forecast_Quarter__c</fullName>
        <label>Forecast Quarter</label>
        <picklist>
            <picklistValues>
                <fullName>Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Forecast_Year__c</fullName>
        <label>Forecast Year</label>
        <picklist>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Outlooks__c</fullName>
        <label>Number of Outlooks</label>
        <summaryForeignKey>Retail_Outlook__c.Retail_Forecast__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Price_book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price book</label>
        <referenceTo>Retail_Price_Book__c</referenceTo>
        <relationshipLabel>Retail Forecasts</relationshipLabel>
        <relationshipName>Retail_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quarter_First_Day__c</fullName>
        <formula>DATEVALUE(CASE( TEXT(Forecast_Quarter__c) ,&quot;Q1&quot;, TEXT( Forecast_Year__c) &amp; &quot;-01-01&quot; , &quot;Q2&quot;, TEXT( Forecast_Year__c)&amp; &quot;-04-01&quot;, &quot;Q3&quot;, TEXT( Forecast_Year__c) &amp; &quot;-07-01&quot;, &quot;Q4&quot;, TEXT( Forecast_Year__c) &amp; &quot;-10-01&quot;, Text(TODAY() )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter First Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Unique ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Mobility Forecast</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Price_book__c</columns>
        <columns>Forecast_Year__c</columns>
        <columns>Forecast_Quarter__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Locked__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Forecasts</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Forecast_Year__c</columns>
        <columns>Forecast_Quarter__c</columns>
        <columns>Price_book__c</columns>
        <columns>Locked__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <label>My Forecasts</label>
    </listViews>
    <nameField>
        <label>Retail Forecast Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mobility Forecasts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>